force overflow scroll on body to avoid stuttering due do scrollbar

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,7 @@ body {
   font-family: Labrada, serif;
   font-size: 1.125rem;
   line-height: 1.2;
+  overflow-y: scroll;
 }
 
 a {
